# SOCshield

./: .dockerignore  .env.example  .gitattributes  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_dashboard.py  vercel.json  vercel_app.py
api/: index.py
app/: __init__.py  correlator.py  event_bus.py  metrics_engine.py  mitre.py  models.py  orchestrator.py  service.py  supervisor.py
app/watchers/: auth_watcher.py  base.py  firewall_watcher.py  priv_watcher.py
app/web/: __init__.py  health.py  helpers.py  queries.py  routes.py
app/web/static/css/: socshield.css
app/web/static/js/: socshield.js
app/web/templates/: alerts.html  base.html  dashboard.html  error.html  incident_detail.html  incidents.html  mitre.html  threat_intel.html
database/: __init__.py  db.py
demo/: README.md
demo/scenario_1_port_scan/: README.md
demo/scenario_2_brute_force/: README.md
demo/scenario_3_priv_esc/: README.md
demo/scenario_4_full_chain/: README.md
deployment/: install_service.sh  socshield.service
detectors/: brute_force_detector.py  port_scan_detector.py  priv_esc_detector.py
docker/: entrypoint.sh
docs/: architecture.md  dashboard.md  demo_script.md  mitre_coverage.md  project_summary.md  resume_bullets.md  threat_model.md  walkthrough.md
docs/diagrams/: 01_system_architecture.md  02_alert_pipeline.md  03_correlation_workflow.md  04_threat_intel_flow.md  05_incident_lifecycle.md
docs/screenshots/: README.md
reports/: coverage_report.py  report_generator.py
scripts/: backup_all.sh  backup_database.py  backup_reports.py  capture_screenshots.sh  validate_deployment.sh
threat_intel/: __init__.py  abuseipdb.py  cache.py  enrichment.py  virustotal.py
