# SOCshield - PEP 621 project metadata.
#
# Vercel's new Python build pipeline auto-detects project managers and
# will run `uv lock` against any project that looks uv/poetry/pipenv
# shaped. To prevent that and force Vercel to use plain `pip install
# -r requirements.txt`, we declare a PEP 621 project with no
# dependencies of its own. The runtime dependencies live exclusively
# in `requirements.txt`, which is what the build installs.
#
# This file intentionally does NOT use [tool.uv] or [tool.poetry] —
# Vercel's auto-detection only triggers uv when it sees one of those
# tool sections OR a uv.lock / poetry.lock / Pipfile.lock. Keeping
# this file PEP 621-only is the documented way to opt out.
#
# See: https://vercel.com/docs/builds/python#python-project-configuration

[project]
name = "socshield"
version = "1.0.0"
description = "SOCshield - Security Operations Center Shield (Flask dashboard for Vercel)"
requires-python = ">=3.12,<3.13"
# No `dependencies` here — the build installs from `requirements.txt`.
# Listing deps here would cause Vercel to run `uv lock` over them.
