# SOCshield - Vercel Python project configuration.
#
# Vercel's new Python build pipeline auto-detects project managers
# (uv, poetry, pipenv) and runs `uv lock` against anything that looks
# uv-shaped. To prevent that AND to make Vercel install our plain
# `requirements.txt` (no PEP 621 dependencies in this file, on purpose),
# we declare a minimal PEP 621 project whose only job is to opt out
# of uv and tell Vercel the entrypoint + requirements file.
#
# IMPORTANT: this file does NOT list runtime dependencies. Listing
# them here would cause Vercel to run `uv lock` over them. All runtime
# dependencies live in `requirements.txt`, which Vercel installs
# because of the [tool.vercel] section below.

[project]
name = "socshield"
version = "1.0.0"
description = "SOCshield - Security Operations Center Shield (Flask dashboard for Vercel)"
requires-python = ">=3.12,<3.13"
# Intentionally empty `dependencies`: the build installs from
# `requirements.txt` (see [tool.vercel] below). Do NOT add deps here
# without also removing `requirements.txt` from [tool.vercel].
dependencies = []

# Vercel-specific build config.
#   * `entrypoint` tells Vercel's auto-detector to skip FastAPI parsing
#     of `api/index.py` and use the Flask `app` re-exported by
#     `vercel_app.py` (which imports from `api/index.py`).
#   * `requirements` tells Vercel's build pipeline to install
#     `requirements.txt` via pip. Without this, Vercel reads
#     `[project].dependencies` (which is empty), installs nothing, and
#     the runtime crashes with `ModuleNotFoundError: No module named
#     'flask'`.
[tool.vercel]
entrypoint = "vercel_app:app"
requirements = "requirements.txt"
